--- a/templates/base_auth.html
+++ b/templates/base_auth.html
@@ -34,6 +34,33 @@
 	<!-- Responsive.css-->
 	<link rel="stylesheet" type="text/css" href="{% static 'auth/assets/css/responsive.css' %}">
 
+	<!-- Employee CSS -->
+
+	
+		<!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="{% static 'auth/assets/css/bootstrap.min.css' %}">
+		
+		<!-- Fontawesome CSS -->
+        <link rel="stylesheet" href="{% static 'auth/assets/css/font-awesome.min.css' %}">
+		
+		<!-- Lineawesome CSS -->
+        <link rel="stylesheet" href="{% static 'auth/assets/css/line-awesome.min.css' %}">
+		
+		<!-- Select2 CSS -->
+		<link rel="stylesheet" href="{% static 'auth/assets/css/select2.min.css' %}">
+		
+		<!-- Datetimepicker CSS -->
+		<link rel="stylesheet" href="{% static 'auth/assets/css/bootstrap-datetimepicker.min.css' %}">
+		
+		<!-- Main CSS -->
+        <link rel="stylesheet" href="{% static 'auth/assets/css/style.css' %}">
+		
+		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+		<!--[if lt IE 9]>
+			<script src="{% static 'auth/assets/js/html5shiv.min.js' %}"></script>
+			<script src="{% static 'auth/assets/js/respond.min.js' %}"></script>
+		<![endif]-->
+
 
 
 </head>
@@ -55,5 +82,29 @@
 
    <!--text js-->
    <script type="text/javascript" src="{% static 'auth/assets/pages/elements.js' %}"></script>
+
+   <!-- Employee Js settings -->
+
+   <!-- jQuery -->
+   <script src="{% static 'auth/assets/js/jquery-3.5.1.min.js' %}"></script>
+		
+   <!-- Bootstrap Core JS -->
+   <script src="{% static 'auth/assets/js/popper.min.js' %}"></script>
+   <script src="{% static 'auth/assets/js/bootstrap.min.js' %}"></script>
+   
+   <!-- Slimscroll JS -->
+   <script src="{% static 'auth/assets/js/jquery.slimscroll.min.js' %}"></script>
+   
+   <!-- Select2 JS -->
+   <script src="{% static 'auth/assets/js/select2.min.js' %}"></script>
+   
+   <!-- Datetimepicker JS -->
+   <script src="{% static 'auth/assets/js/moment.min.js' %}"></script>
+   <script src="{% static 'auth/assets/js/bootstrap-datetimepicker.min.js' %}"></script>
+   
+   <!-- Custom JS -->
+   <script src="{% static 'auth/assets/js/app.js' %}"></script>
+
+   
 </body>
 </html>
