--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 		<meta name="keywords" content="admin, estimates, bootstrap, business, corporate, creative, management, minimal, modern, accounts, invoice, html5, responsive, CRM, Projects">
         <meta name="author" content="Dreamguys - Bootstrap Admin Template">
         <meta name="robots" content="noindex, nofollow">
-        <title>Dashboard - HRMS admin template</title>
+        <title>{% block title  %}{% endblock title %}</title>
 		
 		<!-- Favicon -->
 
