--- a/templates/hrms/admin/employees.html
+++ b/templates/hrms/admin/employees.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}All Employees{% endblock title %}
 {% block content %}
 
 <!-- Main Wrapper -->
@@ -46,7 +47,16 @@
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-3">
-			
+				<div class="form-group form-focus select-focus">
+					<select class="select floating">
+						<option>Select Designation</option>
+						<option>Web Developer</option>
+						<option>Web Designer</option>
+						<option>Android Developer</option>
+						<option>Ios Developer</option>
+					</select>
+		
+				</div>
 			</div>
 			<div class="col-sm-6 col-md-3">
 				<a href="#" class="btn btn-success btn-block"> Search </a>
@@ -387,7 +397,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="table-responsive m-t-15">
+						<!-- <div class="table-responsive m-t-15">
 							<table class="table table-striped custom-table">
 								<thead>
 									<tr>
@@ -571,7 +581,7 @@
 									</tr>
 								</tbody>
 							</table>
-						</div>
+						</div> -->
 						<div class="submit-section">
 							<button class="btn btn-primary submit-btn">Submit</button>
 						</div>
