--- a/templates/hrms/admin/add-employee.html
+++ b/templates/hrms/admin/add-employee.html
@@ -3,5 +3,34 @@
 {% load static %}
 
 {% block content %}
-    
-{% endblock  %}
+
+<div class="main-panel">
+    <div class="content container-fluid">
+
+    <div class="content-wrapper">
+        <div class="row">
+            <div class="col-lg-12 grid-margin">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="text-center text-primary"><i class="fa fa-plus">&emsp; New Employee </i></h4>
+                        <hr>
+                        <form enctype="multipart/form-data" action="{% url 'hrms:employee_new' %}" class="form-group"
+                            method="POST">
+                            {% csrf_token %}
+                            <small class="mb-5"  style="align-items: center;" >** All Fields are required **</small>
+                        
+                            {{form.as_p}}
+                            <div class="text-center mt-3">
+                                <button class="btn btn-outline-success"><i class="mdi mdi-file-document"></i>Add
+                                    Employee</button></button>
+
+                            </div>
+                            </div>
+                        </form>
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endblock %}
