--- a/templates/hrms/admin/partials/sidebar.html
+++ b/templates/hrms/admin/partials/sidebar.html
@@ -9,7 +9,8 @@
                     <a href="#"><i class="la la-dashboard"></i> <span> Dashboard</span> <span class="menu-arrow"></span></a>
                     <ul style="display: none;">
                         
-                        <li><a href="{% url 'admin_dashboard' %}">Dashboard</a></li>
+                        
+                        <li><a href="#">Dashboard</a></li>
                     </ul>
                 </li>
                 
@@ -19,8 +20,8 @@
                 <li class="submenu">
                     <a href="#" class="noti-dot"><i class="la la-user"></i> <span> Employees</span> <span class="menu-arrow"></span></a>
                     <ul style="display: none;">
-                        <li><a href=" {% url 'employees_details' %}">All Employees</a></li>
-                        <li><a href=" {% url 'add_employee' %}">Add Employee</a></li>
+                        <li><a href="/hrms/employees-details/">All Employees</a></li>
+                        <li><a href="/hrms/add-employee/">Add Employee</a></li>
                         <li><a href="holidays.html">Holidays</a></li>
                         <li><a href="leaves.html">Leaves (Admin) <span class="badge badge-pill bg-primary float-right">1</span></a></li>
                         <li><a href="leaves-employee.html">Leaves (Employee)</a></li>
