completedthe employee module

--- a/templates/hrms/admin/partials/sidebar.html
+++ b/templates/hrms/admin/partials/sidebar.html
@@ -18,21 +18,15 @@
                     <span>Employees</span>
                 </li>
                 <li class="submenu">
-                    <a href="#" class="noti-dot"><i class="la la-user"></i> <span> Employees</span> <span class="menu-arrow"></span></a>
+                    <a href="#" class="la la-user"></i> <span> Employees</span> <span class="menu-arrow"></span></a>
                     <ul style="display: none;">
                         <li><a href="/hrms/employees-details/">All Employees</a></li>
                         <li><a href="/hrms/add-employee/">Add Employee</a></li>
-                        <li><a href="holidays.html">Holidays</a></li>
-                        <li><a href="leaves.html">Leaves (Admin) <span class="badge badge-pill bg-primary float-right">1</span></a></li>
-                        <li><a href="leaves-employee.html">Leaves (Employee)</a></li>
-                        <li><a href="leave-settings.html">Leave Settings</a></li>
-                        <li><a href="attendance.html">Attendance (Admin)</a></li>
-                        <li><a href="attendance-employee.html">Attendance (Employee)</a></li>
-                        <li><a href="departments.html">Departments</a></li>
-                        <li><a href="designations.html">Designations</a></li>
-                        <li><a href="timesheet.html">Timesheet</a></li>
-                        <li><a href="shift-scheduling.html">Shift & Schedule</a></li>
-                        <li><a href="overtime.html">Overtime</a></li>
+                        <li><a href="/hrms/dashboard/leave/new/">Leaves</a></li>
+                        <li><a href="/hrms/dashboard/attendance/in/">Attendance</a></li>
+                        <li><a href="/hrms/dashboard/department/add/">Add Department</a></li>
+                        
+                       
                     </ul>
                 </li>
                 <li> 
