--- a/templates/hrms/admin/partials/sidebar.html
+++ b/templates/hrms/admin/partials/sidebar.html
@@ -10,7 +10,7 @@
                     <ul style="display: none;">
                         
                         
-                        <li><a href="#">Dashboard</a></li>
+                        <li><a href="">Dashboard</a></li>
                     </ul>
                 </li>
                 
